build style and layout for countdown app

--- a/index.html
+++ b/index.html
@@ -9,7 +9,64 @@
     <title>Countdown App</title>
   </head>
   <body>
-    <div class="background-container"></div>
+    <div class="background-container">
+      <h2 class="countdown-text">Countdown until: <span>New Years</span></h2>
+      <div class="time-unit days">
+        <p>Days</p>
+        <p>234</p>
+      </div>
+      <div class="time-unit hours">
+        <p>Hours</p>
+        <p>15</p>
+      </div>
+      <div class="time-unit minutes">
+        <p>Minutes</p>
+        <p>5</p>
+      </div>
+      <div class="time-unit seconds">
+        <p>Seconds</p>
+        <p>39</p>
+      </div>
+    </div>
+    <div class="holiday-select-container">
+      <ul class="holiday-list">
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+        <li class="holiday">Christmas</li>
+      </ul>
+    </div>
     <script src="/script.js"></script>
   </body>
 </html>
