change holiday toggle list UI

--- a/index.html
+++ b/index.html
@@ -27,46 +27,56 @@
         <p>Seconds</p>
         <p>39</p>
       </div>
+
+      <div class="holiday-list-wrapper">
+        <button class="show-holidays">
+          <i class="fa fa-gear fa-solid"></i>
+        </button>
+        <div class="holiday-select-container collapse-list">
+          <ul class="holiday-list">
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+            <li class="holiday">Christmas</li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="holiday-select-container">
-      <ul class="holiday-list">
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-        <li class="holiday">Christmas</li>
-      </ul>
-    </div>
+    <script
+      src="https://kit.fontawesome.com/5edcc2e4bd.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="/script.js"></script>
   </body>
 </html>
