remove placeholder text for timer

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <h2 class="countdown-text">Countdown until: <span>New Years</span></h2>
       <div class="time-unit days">
         <p>Days</p>
-        <p>234</p>
+        <p></p>
       </div>
       <div class="time-unit hours">
         <p>Hours</p>
-        <p>15</p>
+        <p></p>
       </div>
       <div class="time-unit minutes">
         <p>Minutes</p>
-        <p>5</p>
+        <p></p>
       </div>
       <div class="time-unit seconds">
         <p>Seconds</p>
-        <p>39</p>
+        <p></p>
       </div>
 
       <div class="holiday-list-wrapper">
@@ -33,43 +33,7 @@
           <i class="fa fa-gear fa-solid"></i>
         </button>
         <div class="holiday-select-container collapse-list">
-          <ul class="holiday-list">
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-            <li class="holiday">Christmas</li>
-          </ul>
+          <ul class="holiday-list"></ul>
         </div>
       </div>
     </div>
