--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       src="https://kit.fontawesome.com/5edcc2e4bd.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
